--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,10 @@
 			<artifactId>ic3</artifactId>
 			<version>0.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 </project>
