--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>lu.uni.trux</groupId>
-	<artifactId>indirectIccResolver</artifactId>
-	<name>indirectIccResolver</name>
+	<artifactId>RHICC</artifactId>
+	<name>RHICC</name>
 	<version>0.1</version>
 	<packaging>jar</packaging>
-	<description>IndirectIccResolver finds unconventional way to perform ICC in Android applications.</description>
+	<description>RHICC finds non-standard way to perform ICC in Android applications.</description>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -54,7 +54,7 @@
 					<archive>
 						<manifest>
 							<mainClass>
-								lu.uni.trux.indirecticcresolver.Main
+								lu.uni.trux.rhicc.Main
 							</mainClass>
 						</manifest>
 					</archive>
